add child to animation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -640,11 +640,22 @@ button:active {
   transition: all 1s ease-in-out;
 }
 
-.form-connexion.visible:first-child {
+.form-connexion:nth-child(1) {
   opacity: 1;
   transform: translateX(0);
 }
 
+/* .form-connexion:nth-child(2) {
+    opacity: 1;
+    transform: translateX(500%);
+    //transition-delay: 0.4s;
+}
+
+.form-connexion:nth-child(3) {
+    opacity: 1;
+    transform: translateX(200%);
+    //transition-delay: 0.6s;
+} */
 .form-connexion:last-child {
   opacity: 1;
   transform: translateX(0);
