--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -622,41 +622,51 @@ button:active {
   background-color: #8888d0;
 }
 
-.form-connexion {
+input {
+  background-color: none;
+  text-align: center;
+  border-radius: 0;
+  box-shadow: none;
+  border-color: white;
+  /* &:focus {
+      box-shadow: none;
+      border-color: white;
+  } */
+}
+
+.form-connexion, input {
   background: linear-gradient(90deg, rgba(41, 133, 138, 0.7) 0%, rgb(123, 93, 53) 35%, rgb(136, 59, 108) 100%);
   border-radius: 30px;
   box-shadow: 0 0 10px rgba(156, 30, 30, 0.1);
-  padding: 30px;
-  width: 100%;
+  width: 70%;
   max-width: 400px;
   margin: 0 auto;
   margin-top: 50px;
-  margin-bottom: 50px;
 }
 
-.form-connexion {
+.form-connexion, input {
   opacity: 0;
   transform: translateY(-100%);
   transition: all 1s ease-in-out;
 }
 
-.form-connexion:nth-child(1) {
+.form-connexion:nth-child(1), input:nth-child(1) {
   opacity: 1;
   transform: translateX(0);
 }
 
 /* .form-connexion:nth-child(2) {
-    opacity: 1;
-    transform: translateX(500%);
-    //transition-delay: 0.4s;
-}
+                opacity: 1;
+                transform: translateX(500%);
+                //transition-delay: 0.4s;
+            }
 
-.form-connexion:nth-child(3) {
-    opacity: 1;
-    transform: translateX(200%);
-    //transition-delay: 0.6s;
-} */
-.form-connexion:last-child {
+            .form-connexion:nth-child(3) {
+                opacity: 1;
+                transform: translateX(200%);
+                //transition-delay: 0.6s;
+            } */
+.form-connexion:last-child, input:last-child {
   opacity: 1;
   transform: translateX(0);
 }
@@ -676,7 +686,7 @@ button:active {
 .form-connexion-header h1 {
   font-size: 30px;
   margin-bottom: 10px;
-  color: white;
+  color: black;
 }
 
 .form-connexion-body {
@@ -687,13 +697,11 @@ button:active {
 
 .form-connexion-input {
   width: 100%;
-  height: 50px;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 20px;
+  border-radius: 5px;
   box-sizing: border-box;
-  margin-bottom: 5px;
+  margin-bottom: -50px;
   text-align: center;
-  font-size: 20px;
 }
 
 .form-connexion-input-submit {
