update form look godd go request the others members

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -693,6 +693,7 @@ input {
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
+  margin-top: -70px;
 }
 
 .form-connexion-input {
@@ -710,6 +711,23 @@ input {
   border-radius: 5px;
   box-sizing: border-box;
   margin-bottom: 5px;
+  text-align: center;
+}
+
+.form-connexion-input input {
+  width: 100%;
+  padding: 20px;
+  border-radius: 15px;
+  box-sizing: border-box;
+  margin-bottom: -50px;
+  text-align: center;
+}
+
+.form-connexion-input-submit input {
+  padding: 20px;
+  border-radius: 15px;
+  box-sizing: border-box;
+  margin-top: 50px;
   text-align: center;
 }
 
