--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -78,6 +78,8 @@ input {
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
+    //faire remonter les inputs
+    margin-top: -70px;
 }
 
 .form-connexion-input {
@@ -95,5 +97,24 @@ input {
     border-radius: 5px;
     box-sizing: border-box;
     margin-bottom: 5px;
+    text-align: center;
+}
+
+//recupère tous les inputs dans la classe form-connexion-input  
+.form-connexion-input input {
+    width: 100%;
+    padding: 20px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    margin-bottom: -50px;
+    text-align: center;
+}
+
+.form-connexion-input-submit input {
+    //width: 100%;
+    padding: 20px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    margin-top: 50px;
     text-align: center;
 }
