--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1070,11 +1070,10 @@ img.img-section2 {
   }
 }
 .sideBar-product {
-  background: url(../images/products/BigLogo.png) no-repeat;
+  background: url(../images/products/BigLogo.png) no-repeat bottom;
   background-color: #DB0007;
-  background-position: 0px 206px;
   width: 350px;
-  height: 724px;
+  height: 879px;
   z-index: -1;
   margin-left: 48px;
   margin-top: 102px;
@@ -1122,11 +1121,63 @@ img.img-section2 {
   z-index: 1;
 }
 
-.bg-logo {
-  background: url(../../images/products/BigLogo.png) no-repeat center center fixed;
-  background-size: cover;
-  width: 350px;
-  height: 750px;
+.image_map {
+  width: 75%;
+  margin: auto;
+  text-align: center;
+  padding-top: 90px;
+}
+
+.image_map img {
+  width: 100%;
+  object-fit: cover;
+  margin-top: -80px;
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+
+.map_call {
+  position: absolute;
+  margin-top: -380px;
+  margin-left: 2%;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.999);
+  padding: 10px 10px;
+}
+
+.map_call h1 {
+  font-size: 15px;
+  font-weight: 600;
+}
+
+@media (max-width: 700px) {
+  .image_map {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    margin: auto;
+  }
+  .image_map img {
+    border-radius: unset;
+  }
+  .map_call {
+    position: absolute;
+    margin-top: -380px;
+    margin-left: 11%;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.999);
+    padding: 10px 10px;
+    margin-top: 0px;
+  }
+  .map_call h1 {
+    font-size: 15px;
+    font-weight: 600;
+  }
+  iframe {
+    width: 280px;
+    height: 200px;
+  }
 }
 .map {
   margin: auto;
