--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -678,6 +678,14 @@ input {
   margin-bottom: 30px;
 }
 
+.form-connexion-logo img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-top: 10px;
+}
+
 .form-connexion-header {
   text-align: center;
   margin-bottom: 30px;
