--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -26,7 +26,7 @@
         .nav-link ul li a {
             text-decoration: none;
             color: #fff;
-            font-size: 13px;
+            //font-size: 13px;
         }
         
         .nav-link ul li button {
@@ -91,7 +91,7 @@
                 background: rgba(255, 255, 255, 0.073);
                 height: 100vh;
                 top: 0;
-                right: -200px;
+                right: -300px;
                 text-align: left;
                 z-index: 2;
                 transition: 1s;
