build form basic 100%

--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -91,7 +91,7 @@ input {
 }
 
 .form-connexion-input {
-    width: 100%;
+    // width: 100%;
     padding: 20px;
     border-radius: 5px;
     box-sizing: border-box;
@@ -100,7 +100,7 @@ input {
 }
 
 .form-connexion-input-submit {
-    width: 100%;
+    //width: 100%;
     padding: 10px;
     border-radius: 5px;
     box-sizing: border-box;
@@ -110,19 +110,20 @@ input {
 
 //recupère tous les inputs dans la classe form-connexion-input  
 .form-connexion-input input {
-    width: 100%;
+    // width: 100%;
     padding: 20px;
-    border-radius: 15px;
-    box-sizing: border-box;
+    //border-radius: 15px;
+    //box-sizing: border-box;
     margin-bottom: -50px;
     text-align: center;
 }
 
 .form-connexion-input-submit input {
-    //width: 100%;
+    width: 90%;
     padding: 20px;
     border-radius: 15px;
     box-sizing: border-box;
     margin-top: 50px;
     text-align: center;
+    //margin-bottom: -100px;
 }
