--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -20,6 +20,7 @@ button {
 }
 
 .button-secondary {
+    background: none;
     background-color: $secondary-color;
     &:hover {
         background-color: darken($secondary-color, 10%);
@@ -30,6 +31,7 @@ button {
 }
 
 .button-warning {
+    background: none;
     background-color: $warning-color;
     &:hover {
         background-color: darken($warning-color, 10%);
@@ -40,6 +42,7 @@ button {
 }
 
 .button-info {
+    background: none;
     background-color: $info-color;
     &:hover {
         background-color: darken($info-color, 10%);
@@ -50,6 +53,7 @@ button {
 }
 
 .button-success {
+    background: none;
     background-color: $success-color;
     &:hover {
         background-color: darken($success-color, 10%);
@@ -60,6 +64,7 @@ button {
 }
 
 .button-extra1 {
+    background: none;
     background-color: $extra1-color;
     &:hover {
         background-color: darken($extra1-color, 10%);
