--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -702,17 +702,17 @@ input {
 }
 
 .form-connexion-body {
-  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   margin-top: -70px;
 }
 
 .form-connexion-input {
-  padding: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
   border-radius: 5px;
   box-sizing: border-box;
-  margin-bottom: -50px;
+  margin-bottom: -43px;
   text-align: center;
 }
 
@@ -726,7 +726,6 @@ input {
 
 .form-connexion-input input {
   padding: 20px;
-  margin-bottom: -50px;
   text-align: center;
   background: white;
 }
@@ -738,6 +737,25 @@ input {
   box-sizing: border-box;
   margin-top: 50px;
   text-align: center;
+}
+
+.form-connexion-links {
+  text-align: center;
+  margin-bottom: -20px;
+  margin-top: 50px;
+}
+
+.form-connexion-links a {
+  margin-left: -100px;
+  font-size: small;
+  cursor: pointer;
+}
+
+.form-connexion-links .eye {
+  margin-top: -23px;
+  margin-left: 220px;
+  font-size: 15px;
+  cursor: pointer;
 }
 
 a {
