--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -151,3 +151,8 @@
         font-size: 15px;
         cursor: pointer;
     }
+    
+    .form-connexion-input-submit span {
+        font-size: 15px;
+        cursor: pointer;
+    }
