build connexion  ok

--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -155,4 +155,6 @@
     .form-connexion-input-submit span {
         font-size: 15px;
         cursor: pointer;
+        //en bold
+        font-weight: bold;
     }
