build connexion  ok

--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -141,8 +141,9 @@
     .form-connexion-links a {
         //le decaler vers la gauche
         margin-left: -100px;
-        font-size: small;
+        font-size: 12px;
         cursor: pointer;
+        color: #000;
     }
     
     .form-connexion-links .eye {
