--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -747,8 +747,9 @@ input {
 
 .form-connexion-links a {
   margin-left: -100px;
-  font-size: small;
+  font-size: 12px;
   cursor: pointer;
+  color: #000;
 }
 
 .form-connexion-links .eye {
