--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -698,7 +698,7 @@ input {
 .form-connexion-header h1 {
   font-size: 30px;
   margin-bottom: 10px;
-  color: black;
+  color: #fff;
 }
 
 .form-connexion-body {
@@ -749,7 +749,7 @@ input {
   margin-left: -100px;
   font-size: 12px;
   cursor: pointer;
-  color: #000;
+  color: #fff;
 }
 
 .form-connexion-links .eye {
@@ -763,6 +763,7 @@ input {
   font-size: 13px;
   cursor: pointer;
   font-weight: bold;
+  color: #fff;
 }
 
 a {
