--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -77,7 +77,7 @@
     .form-connexion-header h1 {
         font-size: 30px;
         margin-bottom: 10px;
-        color: black;
+        color: #fff;
     }
     
     .form-connexion-body {
@@ -143,7 +143,7 @@
         margin-left: -100px;
         font-size: 12px;
         cursor: pointer;
-        color: #000;
+        color: #fff;
     }
     
     .form-connexion-links .eye {
@@ -158,4 +158,5 @@
         cursor: pointer;
         //en bold
         font-weight: bold;
+        color: #fff;
     }
