--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -19,7 +19,8 @@
 @import './components/links';
 @import './components/menu';
 @import './components/text_box';
-@import './components/section1';
+@import './components/animate_card';
 @import './components/section2';
 @import'./components/image_map';
 @import './components/order_map';
+@import './components/card';
