--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -20,7 +20,7 @@
 @import './components/menu';
 @import './components/text_box';
 @import './components/animate_card';
-@import './components/section2';
 @import'./components/image_map';
 @import './components/order_map';
 @import './components/card';
+@import './components/layers';
