--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -974,69 +974,6 @@ h3 {
   transform: translateX(0);
 }
 
-/* section2 */
-.section2 {
-  width: 70%;
-  margin: auto;
-  text-align: center;
-  padding-top: 50px;
-}
-
-.section2 p {
-  font-size: 15px;
-}
-
-.section2-col {
-  flex-basis: 32%;
-  border-radius: 10px;
-  margin-bottom: 30px;
-  position: relative;
-  overflow: hidden;
-}
-
-img.img-section2 {
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
-.layer {
-  background: transparent;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: 0.5s;
-}
-
-.layer:hover {
-  background: rgba(244, 177, 54, 0.6117647059);
-}
-
-.layer h3 {
-  width: 100%;
-  font-weight: 500;
-  color: #fff;
-  font-size: 26px;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  position: absolute;
-  opacity: 0;
-  transition: 0.5s;
-}
-
-.layer:hover h3 {
-  bottom: 50%;
-  opacity: 1;
-}
-
-@media (max-width: 700px) {
-  .section2 {
-    padding-top: 300px;
-  }
-}
 .image_map {
   width: 75%;
   margin: auto;
@@ -1099,6 +1036,70 @@ img.img-section2 {
   margin: auto;
   width: 100%;
   height: 100%;
+}
+
+/* layers */
+.layers {
+  width: 70%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.layers p {
+  font-size: 15px;
+}
+
+.layers-col {
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+
+img.img-layers {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.layer {
+  background: transparent;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+
+.layer:hover {
+  background: rgba(244, 177, 54, 0.6117647059);
+}
+
+.layer h3 {
+  width: 100%;
+  font-weight: 500;
+  color: #fff;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.layer:hover h3 {
+  bottom: 50%;
+  opacity: 1;
+}
+
+@media (max-width: 700px) {
+  .layers {
+    padding-top: 300px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
