--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1041,10 +1041,11 @@ h3 {
 .card {
   margin: auto;
   text-align: center;
-  border-radius: 25px;
+  border-radius: 15px;
   height: 200px;
   width: 200px;
   background: #e0e0e0;
+  position: relative;
 }
 
 .card img {
@@ -1053,12 +1054,29 @@ h3 {
   width: 100%;
   object-fit: cover;
   background: #bab8b8;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .card .article_name {
   font-weight: bold;
+  text-align: center;
+  position: absolute;
+  left: -120px;
+  right: 0;
+  bottom: 0;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.card .article_price {
+  position: absolute;
+  left: 0;
+  right: -120px;
+  bottom: 0;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: small;
 }
 
 /* layers */
