--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -1,10 +1,11 @@
 .card {
     margin: auto;
     text-align: center;
-    border-radius: 25px;
+    border-radius: 15px;
     height: 200px;
     width: 200px;
     background: #e0e0e0;
+    position: relative;
 }
 
 .card img {
@@ -14,11 +15,28 @@
     object-fit: cover;
     background: #bab8b8;
     //rajoute un border radius en haut
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 //deplace .card .article_name  au centre
 .card .article_name {
     font-weight: bold;
+    text-align: center;
+    position: absolute;
+    left: -120px;
+    right: 0;
+    bottom: 0;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.card .article_price {
+    position: absolute;
+    left: 0;
+    right: -120px;
+    bottom: 0;
+    margin-bottom: 15px;
+    font-weight: bold;
+    font-size: small;
 }
