--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -33,8 +33,9 @@
 }
 
 .card .article_price {
+    width: 30%;
     position: absolute;
-    left: 0;
+    left: 130px;
     right: -120px;
     bottom: 0;
     margin-bottom: 15px;
