--- a/assets/sass/components/_side_bar.scss
+++ b/assets/sass/components/_side_bar.scss
@@ -12,8 +12,15 @@
     left: 100px;
     overflow-x: hidden;
     padding-top: 20px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
-.side_bar .icon {
-    color: black;
+.side_bar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 15px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
 }
