--- a/assets/sass/components/_side_bar.scss
+++ b/assets/sass/components/_side_bar.scss
@@ -23,8 +23,7 @@
     color: #818181;
     display: block;
     transition: 0.3s;
-    //mettre de l'espace entre les liens
-    margin-bottom: 10px;
+    - margin-bottom: 10px;
 }
 
 .side_bar img {
