--- a/assets/sass/components/_side_bar.scss
+++ b/assets/sass/components/_side_bar.scss
@@ -23,7 +23,7 @@
     color: #818181;
     display: block;
     transition: 0.3s;
-    - margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .side_bar img {
