--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body,
 html {
   margin: 0;
@@ -1166,7 +1167,7 @@ img.img-layers {
 .side_bar a {
   padding: 8px 25px 8px 15px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 8px;
   color: #818181;
   display: block;
   transition: 0.3s;
@@ -1176,5 +1177,38 @@ img.img-layers {
 .side_bar img {
   display: block;
 }
+
+.side_bar span {
+  display: none;
+}
+
+.side_bar a:hover + span,
+.side_bar a:hover > span {
+  float: right;
+  display: block;
+  font-size: 8px;
+  margin-top: -20px;
+  margin-right: 10px;
+  margin-left: 35px;
+  background-color: #264F36;
+}
+
+/* .side_bar span:hover {
+    float: right;
+    display: block;
+    font-size: 8px;
+    margin-top: -20px;
+    margin-right: 10px;
+    margin-left: 35px;
+} */
+/* .side_bar span {
+    float: right;
+    display: block;
+    font-size: 8px;
+    margin-top: -20px;
+    margin-right: 10px;
+    margin-left: 35px;
+     Ajout de cette ligne pour déplacer le span vers la droite  
+    }*/
 
 /*# sourceMappingURL=main.css.map */
