--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1190,17 +1190,12 @@ img.img-layers {
   margin-top: -20px;
   margin-right: 10px;
   margin-left: 35px;
-  background-color: #264F36;
 }
 
-/* .side_bar span:hover {
-    float: right;
-    display: block;
-    font-size: 8px;
-    margin-top: -20px;
-    margin-right: 10px;
-    margin-left: 35px;
-} */
+.side_bar a:hover ~ span {
+  display: none;
+}
+
 /* .side_bar span {
     float: right;
     display: block;
