--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -25,3 +25,4 @@
 @import './components/card';
 @import './components/layers';
 @import './components/side_bar';
+@import './components/design_gui';
