--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1196,10 +1196,33 @@ img.img-layers {
   margin-left: 35px;
 }
 
+.design_gui {
+  display: block;
+  /*      //background-color: transparent;
+  background-color: #525754;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: -100px;
+  //width: 100px;
+  height: 80%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 100px;
+  overflow-x: hidden;
+  padding-top: 20px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px; */
+}
+
 a {
   color: black;
   text-align: center;
   display: block;
+}
+
+h1 {
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
