--- a/assets/sass/components/_design_gui.scss
+++ b/assets/sass/components/_design_gui.scss
@@ -1,5 +1,28 @@
-a {
-    color: black;
-    text-align: center;
-    display: block;
-}
+    .design_gui {
+        display: block;
+        /*      //background-color: transparent;
+        background-color: #525754;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-left: -100px;
+        //width: 100px;
+        height: 80%;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 100px;
+        overflow-x: hidden;
+        padding-top: 20px;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px; */
+    }
+    
+    a {
+        color: black;
+        text-align: center;
+        display: block;
+    }
+    
+    h1 {
+        text-align: center;
+    }
