--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -26,3 +26,4 @@
 @import './components/layers';
 @import './components/side_bar';
 @import './components/design_gui';
+@import './components/content';
