responsive page product

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -939,7 +939,7 @@ h3 {
 }
 
 @media (max-width: 700px) {
-  .row {
+  .row_animate_card {
     flex-direction: column;
     margin-top: 0;
   }
@@ -1048,6 +1048,7 @@ h3 {
   background: #e0e0e0;
   position: relative;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 
 img {
@@ -1088,6 +1089,13 @@ img {
   padding-bottom: 5px;
 }
 
+@media (max-width: 700px) {
+  .row {
+    display: inline-block;
+    width: 48%;
+    margin-right: 4%;
+  }
+}
 /* layers */
 .layers {
   width: 70%;
@@ -1237,6 +1245,15 @@ h1 {
   /* permet de faire défiler le contenu si nécessaire */
   height: calc(100vh - 80px);
   /* calcul la hauteur restante de la page pour que le contenu prenne tout l'espace disponible */
+}
+
+@media (max-width: 700px) {
+  .content {
+    margin-left: 150px;
+    overflow-y: scroll;
+    /* permet de faire défiler le contenu si nécessaire */
+    height: calc(100vh - 80px);
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
