--- a/assets/sass/components/_animate_card.scss
+++ b/assets/sass/components/_animate_card.scss
@@ -75,7 +75,7 @@
     }
     
     @media(max-width: 700px) {
-        .row {
+        .row_animate_card {
             flex-direction: column;
             margin-top: 0;
         }
