--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -1,52 +1,60 @@
-.card {
-    margin: auto;
-    text-align: center;
-    border-radius: 15px;
-    height: 200px;
-    width: 200px;
-    background: #e0e0e0;
-    position: relative;
-    cursor: pointer;
-}
-
-img {
-    height: 80%;
-}
-
-.card img {
-    display: block;
-    margin: auto;
-    width: 100%;
-    object-fit: cover;
-    background: #bab8b8;
-    //rajoute un border radius en haut
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-}
-
-//deplace .card .article_name  au centre
-.card .article_name {
-    font-weight: bold;
-    text-align: center;
-    position: absolute;
-    left: -110px;
-    right: 0;
-    bottom: 0;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.card .article_price {
-    width: 30%;
-    position: absolute;
-    left: 130px;
-    //right: -120px;
-    bottom: -3px;
-    margin-bottom: 10px;
-    font-size: small;
-    background: #88BF7F;
-    border-radius: 6px;
-    //augment en haut et en bas la marge
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
+        .card {
+            margin: auto;
+            text-align: center;
+            border-radius: 15px;
+            height: 200px;
+            width: 200px;
+            background: #e0e0e0;
+            position: relative;
+            cursor: pointer;
+            margin-bottom: 10px;
+        }
+        
+        img {
+            height: 80%;
+        }
+        
+        .card img {
+            display: block;
+            margin: auto;
+            width: 100%;
+            object-fit: cover;
+            background: #bab8b8;
+            //rajoute un border radius en haut
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+        }
+        
+        //deplace .card .article_name  au centre
+        .card .article_name {
+            font-weight: bold;
+            text-align: center;
+            position: absolute;
+            left: -110px;
+            right: 0;
+            bottom: 0;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+        
+        .card .article_price {
+            width: 30%;
+            position: absolute;
+            left: 130px;
+            //right: -120px;
+            bottom: -3px;
+            margin-bottom: 10px;
+            font-size: small;
+            background: #88BF7F;
+            border-radius: 6px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+        }
+        
+        @media(max-width: 700px) {
+            .row {
+                display: inline-block;
+                width: 48%;
+                margin-right: 4%;
+            }
+        }
