--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -889,7 +889,7 @@ p {
   padding: 10px;
 }
 
-.row {
+.row_animate_card {
   margin-top: 5%;
   display: flex;
   justify-content: space-between;
@@ -959,18 +959,18 @@ h3 {
     margin-left: 50px;
   }
 }
-.animate_card .row .animate_card-col {
+.animate_card .row_animate_card .animate_card-col {
   opacity: 0;
   transform: translateX(-100%);
   transition: all 1s ease-in-out;
 }
 
-.animate_card.visible .row .animate_card-col:first-child {
+.animate_card.visible .row_animate_card .animate_card-col:first-child {
   opacity: 1;
   transform: translateX(0);
 }
 
-.animate_card.visible .row .animate_card-col:last-child {
+.animate_card.visible .row_animate_card .animate_card-col:last-child {
   opacity: 1;
   transform: translateX(0);
 }
@@ -1108,6 +1108,12 @@ img {
   font-size: 15px;
 }
 
+.row_layers {
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+
 .layers-col {
   flex-basis: 32%;
   border-radius: 10px;
@@ -1157,6 +1163,11 @@ img.img-layers {
 @media (max-width: 700px) {
   .layers {
     padding-top: 300px;
+  }
+  .row_layers {
+    margin-top: 5%;
+    display: unset;
+    justify-content: space-between;
   }
 }
 .side_bar {
