--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -10,6 +10,13 @@
             margin-bottom: 10px;
         }
         
+        .row {
+            margin-right: 4%;
+            margin-top: 2%;
+            display: flex;
+            justify-content: space-between;
+        }
+        
         img {
             height: 80%;
         }
