--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -17,6 +17,14 @@
             justify-content: space-between;
         }
         
+        .h1 {
+            text-align: center;
+            font-size: 30px;
+            font-weight: bold;
+            margin-top: 20px;
+            color: gray;
+        }
+        
         img {
             height: 80%;
         }
