--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1058,6 +1058,14 @@ h3 {
   justify-content: space-between;
 }
 
+.h1 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 20px;
+  color: gray;
+}
+
 img {
   height: 80%;
 }
