--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1236,22 +1236,8 @@ img.img-layers {
 }
 
 .design_gui {
-  display: block;
-  /*      //background-color: transparent;
-  background-color: #525754;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  margin-left: -100px;
-  //width: 100px;
-  height: 80%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 100px;
-  overflow-x: hidden;
-  padding-top: 20px;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px; */
+  width: 30%;
+  height: 100%;
 }
 
 a {
