upade design gui page

--- a/assets/sass/components/_design_gui.scss
+++ b/assets/sass/components/_design_gui.scss
@@ -1,9 +1,8 @@
     .design_gui {
         //diminue la taille 
         width: 30%;
-        //occupe toute la hauteur
         height: 100%;
-        //margin-left: 20%;
+        border-right: 2px solid #673a2f;
     }
     
     a {
