--- a/assets/sass/components/_design_gui.scss
+++ b/assets/sass/components/_design_gui.scss
@@ -2,6 +2,10 @@
         //diminue la taille 
         width: 30%;
         height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
         border-right: 2px solid #673a2f;
     }
     
