try build caarousel

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -27,3 +27,4 @@
 @import './components/side_bar';
 @import './components/design_gui';
 @import './components/content';
+@import './components/carousel';
