--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1289,5 +1289,53 @@ h1 {
     margin-left: -2%;
   }
 }
+.carousel {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.carousel ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 300%;
+  display: flex;
+  transition: transform 0.3s ease;
+}
+
+.carousel ul li {
+  width: 33.3333333333%;
+}
+
+.carousel ul li img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel__prev,
+.carousel__next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background-color: rgba(163, 12, 12, 0.5);
+  color: #fff;
+  font-size: 24px;
+  border: none;
+  cursor: pointer;
+}
+
+.carousel__prev {
+  left: 0;
+}
+
+.carousel__next {
+  right: 0;
+}
 
 /*# sourceMappingURL=main.css.map */
