--- a/assets/sass/components/_carousel.scss
+++ b/assets/sass/components/_carousel.scss
@@ -1,48 +1,98 @@
-.carousel {
+.mySlides {
+    display: none
+}
+
+.carousel-container img {
+    vertical-align: middle;
+}
+
+.carousel-container {
+    max-width: 1000px;
     position: relative;
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
+    margin: auto;
 }
 
-.carousel ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    width: calc(100% * 3);
-    display: flex;
-    transition: transform 0.3s ease;
-}
-
-.carousel ul li {
-    width: calc(100% / 3);
-}
-
-.carousel ul li img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.carousel__prev,
-.carousel__next {
+.prev,
+.next {
+    cursor: pointer;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    width: 50px;
-    height: 50px;
-    background-color: rgba(163, 12, 12, 0.5);
-    color: #fff;
-    font-size: 24px;
-    border: none;
-    cursor: pointer;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
 
-.carousel__prev {
-    left: 0;
-}
-
-.carousel__next {
+.next {
     right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+
+/* On smaller screens, decrease text size */
+
+@media only screen and (max-width: 300px) {
+    .prev,
+    .next,
+    .text {
+        font-size: 11px
+    }
 }
