build carousel ok

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1307,6 +1307,10 @@ h1 {
   display: none;
 }
 
+.carousel-currentSlider {
+  text-align: center;
+}
+
 .carousel-container img {
   vertical-align: middle;
 }
