--- a/assets/sass/components/_carousel.scss
+++ b/assets/sass/components/_carousel.scss
@@ -2,6 +2,10 @@
     display: none
 }
 
+.carousel-currentSlider {
+    text-align: center;
+}
+
 .carousel-container img {
     vertical-align: middle;
 }
