--- a/assets/sass/components/_carousel.scss
+++ b/assets/sass/components/_carousel.scss
@@ -10,6 +10,10 @@
     vertical-align: middle;
 }
 
+.carousel-images img {
+    width: 100%;
+}
+
 .carousel-container {
     max-width: 1000px;
     position: relative;
