--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -28,3 +28,4 @@
 @import './components/design_gui';
 @import './components/content';
 @import './components/carousel';
+@import './components/testimonial';
