--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1419,41 +1419,43 @@ h1 {
   color: grey;
 }
 
-.testimonials-col {
-  flex-basis: 42%;
-  margin: 0.5%;
-  text-align: left;
-  padding: 25px;
-  border-radius: 15px;
-  background-color: rgba(30, 4, 4, 0.7);
-  cursor: pointer;
-  display: flex;
-}
-
+/* .testimonials-col {
+    flex-basis: 42%;
+    margin: 0.5%;
+    text-align: left;
+    padding: 25px;
+    border-radius: 15px;
+    background-color: rgba(30, 4, 4, 0.7);
+    cursor: pointer;
+    display: flex;
+} */
 img.img-fourth {
-  height: 40px;
-  margin-left: 5px;
-  margin-right: 30px;
+  height: 65px;
   border-radius: 20%;
 }
 
-.testimonials-col p {
-  padding: 0;
+.testimonials .row .col-3 {
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* .testimonials-col p {
+    padding: 0;
 }
 
 .testimonials-col h3 {
-  margin-top: 15px;
-  text-align: left;
+    margin-top: 15px;
+    text-align: left;
 }
 
 .testimonials-col .fas {
-  color: #f44336;
+    color: #f44336;
 }
 
 .testimonials-col .far {
-  color: #f44336;
+    color: #f44336;
 }
-
+ */
 @media (max-width: 700px) {
   .testimonials h1 {
     font-size: 22px;
